<resources>
    <string name="app_name">Componentes - Material Design</string>
    <string name="label_buttons">Buttons</string>
    <string name="label_text_field">Text Fields</string>
    <string name="label_bottom_sheet">Bottom Sheets</string>
    <string name="label_top_app_bar">Top App Bars</string>
    <string name="label_bottom_app_bar">Bottom App Bars</string>
    <string name="label_snack_bars">Snackbars</string>
    <string name="label_bottom_navigation">Bottom Navigation</string>
</resources>